libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-expr-invalid.jsonc
//@ run: fail
//@ description: every expression, except for struct, tuple and paths are not valid type expressions
[
  "::kernel::special_form::as",
  [
    "::kernel::special_form::as",
    [
      "::kernel::special_form::as",
      [
        "::kernel::special_form::as",
        "x",
        // ensure that we properly resolve nested is expressions as errors
        ["::kernel::special_form::as", "x", "X"]
        //~^ ERROR Replace this as with a proper type expression
      ],
      { "#literal": 1 }
      //~^ ERROR Replace this literal with a type name
    ],
    { "#list": ["a", "b"] }
    //~^ ERROR Replace this list with a proper type expression
  ],
  { "#dict": { "a": "b" } }
  //~^ ERROR Replace this dictionary with a proper type expression
]
